[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = ["Ninjani"]

[dependencies]
aoc-runner = "0.2.0"
aoc-runner-derive = "0.2.0"
itertools = "0.7.11"
ndarray = "0.12.1"
chrono = "0.4.6"
failure = "0.1.3"
petgraph = "0.4.13"
hashbrown = "0.1"
regex = "1.1.0"
strum = "0.11.0"
strum_macros = "0.11.0"
